--- a/http/preseed.cfg
+++ b/http/preseed.cfg
@@ -34,6 +34,9 @@
 
 ### Preseed file for Debian Wheezy
 
+### Enable ssh service when installation is completed
+d-i preseed/late_command string in-target systemctl enable ssh
+
 ### Time Zone
 d-i time/zone string Europe/Stockholm
 
@@ -85,3 +88,4 @@ d-i preseed/early_command string anna-install openmediavault-installer
 
 ### Don't show reboot notice
 d-i finish-install/reboot_in_progress note
+
